// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUToolbar /> should render 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    placeholder="Name or abbreviation"
    value="foo"
  />
  <Button
    active={false}
    bsStyle="default"
    id="verified-button"
    onClick={[Function]}
    pullRight={false}
    tip="Filter Unverified"
    tipPlacement="top"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="filter"
      pullRight={false}
    />
  </Button>
  <withRouter(LinkContainer)
    replace={true}
    to={
      Object {
        "state": Object {
          "createOTU": true,
        },
      }
    }
  >
    <Button
      bsStyle="primary"
      pullRight={false}
      tip="Create"
      tipPlacement="top"
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="plus-square"
        pullRight={false}
      />
    </Button>
  </withRouter(LinkContainer)>
</Toolbar>
`;

exports[`<OTUToolbar /> should render when [verified=true] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    placeholder="Name or abbreviation"
    value="foo"
  />
  <Button
    active={true}
    bsStyle="default"
    id="verified-button"
    onClick={[Function]}
    pullRight={false}
    tip="Filter Unverified"
    tipPlacement="top"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="filter"
      pullRight={false}
    />
  </Button>
  <withRouter(LinkContainer)
    replace={true}
    to={
      Object {
        "state": Object {
          "createOTU": true,
        },
      }
    }
  >
    <Button
      bsStyle="primary"
      pullRight={false}
      tip="Create"
      tipPlacement="top"
    >
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="plus-square"
        pullRight={false}
      />
    </Button>
  </withRouter(LinkContainer)>
</Toolbar>
`;
